# PostLightController

./: .gitignore  .gitmodules  Color.cpp  Color.h  ConstantColor.cpp  ConstantColor.h  Effect.cpp  Effect.h  Flash.cpp  Flash.h  Flicker.cpp  Flicker.cpp-x  Flicker.h  InterpretedEffect.cpp  InterpretedEffect.h  Interpreter.cpp  Interpreter.h  LICENSE  NativeColor.cpp  NativeColor.h  NeoPixel.h  Opcodes.h  PostLightController.cpp  PostLightController.h  PostLightController.html  PostLightController.ino  PostLightController.kicad_prl  PostLightControllerESP.ino  PostLightEffects.arly  PostLightEffects.clvr  README  README.md  boards.local.txt  f.lua  mainpanel.json  mainpanel.lua  partitions.csv  update_code
CompileArly/: ArlyCompileEngine.cpp  ArlyCompileEngine.h  CloverCompileEngine.cpp  CloverCompileEngine.h  Compile.cpp  Compile.h  CompileEngine.cpp  CompileEngine.h  Compiler.cpp  Compiler.h  Decompiler.cpp  Decompiler.h  Interpreter.cpp  Interpreter.h  PostLightEffects.arly  PostLightEffects.clvr  Scanner.cpp  Scanner.h  main.cpp
CompileArly/CompileArly/: Compile.hpp
CompileArly/CompileArly.xcodeproj/: project.pbxproj
CompileArly/CompileArly.xcodeproj/project.xcworkspace/xcuserdata/cmarrin.xcuserdatad/: UserInterfaceState.xcuserstate
CompileArly/CompileArly.xcodeproj/xcshareddata/xcschemes/: CompileArly.xcscheme
CompileArly/CompileArly.xcodeproj/xcuserdata/cmarrin.xcuserdatad/xcschemes/: xcschememanagement.plist
CompileArly/DerivedData/CompileArly/Logs/Index Build/: LogStoreManifest.plist
PostLightController/: Flash.cpp
PostLightController-esp-idf/: .clangd  .cproject  .project  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
PostLightController-esp-idf/main/: CMakeLists.txt  idf_component.yml  main.cpp
PostLightController-espidf/: CMakeLists.txt  sdkconfig.16mb  sdkconfig.4mb  sdkconfig.defaults
PostLightController-espidf/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp
espidf/: esp_idf_project_configuration.json  partitions-16mb.csv  partitions-4mb.csv  sdkconfig  sdkconfig.defaults
espidf/main/: CMakeLists.txt  main.cpp
kicad/ArduinoNano/: PostLightController.kicad_pcb  PostLightController.kicad_pro  PostLightController.net  PostLightController.pro  PostLightController.sch
kicad/Passive/: Passive-B_Cu.gbl  Passive-B_Mask.gbs  Passive-B_Paste.gbp  Passive-B_Silkscreen.gbo  Passive-Edge_Cuts.gm1  Passive-F_Cu.gtl  Passive-F_Mask.gts  Passive-F_Paste.gtp  Passive-F_Silkscreen.gto  Passive-NPTH-drl_map.gbr  Passive-NPTH.drl  Passive-PTH-drl_map.gbr  Passive-PTH.drl  Passive.kicad_pcb  Passive.kicad_prl  Passive.kicad_pro  Passive.kicad_sch
mac/: PostLightEffects.arly  PostLightEffects.clvr  main.cpp  partitions.csv
mac/CompileArly.xcodeproj/xcshareddata/xcschemes/: CompileArly.xcscheme
mac/CompileClover.xcodeproj/: project.pbxproj
mac/CompileClover.xcodeproj/xcshareddata/xcschemes/: CompileArly.xcscheme  CompileClover.xcscheme
mac/PostLightController.xcodeproj/: project.pbxproj
mac/PostLightController.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
mac/PostLightController.xcodeproj/xcshareddata/xcschemes/: PostLightController.xcscheme
mac/littlefs/: executable.clvx
(+3 files in other folders)
